unpackaged/main/default/objects/SBQQ__PriceTier__c/fields/Order_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_ID__c</fullName>
    <formula>SBQQ__PriceSchedule__r.SBQQ__OrderProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product ID</label>
    <type>Text</type>
</CustomField>