unpackaged/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__Price__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Price__c</fullName>
    <description>The actual price of this Price Tier. This field will be populated when a new set of Price Schedules are created for a new Order record.</description>
    <inlineHelpText>Prix actuel de ce niveau de prix. Ce champ est renseigné lors de la création d&#39;un ensemble de barèmes de remise pour un nouvel enregistrement de commande.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>