unpackaged/main/default/objects/SBQQ__PriceTier__c/fields/SBQQ__PriceSchedule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PriceSchedule__c</fullName>
    <description>Price Schedule to which this tier belongs.</description>
    <inlineHelpText>Barème de prix auquel ce niveau appartient.</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
    <relationshipLabel>Price Tiers</relationshipLabel>
    <relationshipName>PriceTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>